<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="1"
        android:title="@string/action_settings"
        compat:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_getWeather"
        android:icon="@drawable/ic_action_cloud"
        android:orderInCategory="2"
        android:title="@string/action_getWeather"
        compat:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about"
        android:orderInCategory="3"
        android:title="@string/action_about"
        compat:showAsAction="ifRoom|withText"/>

</menu>