<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/my_layout_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtAboutTitle"
            style="@style/my_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_about" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtCreatedByLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_label_createdby" />

            <TextView
                android:id="@+id/txtCreatedByName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_creatorName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtStudentNumLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_label_studentnum" />

            <TextView
                android:id="@+id/txtStudentNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_studentNum" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>