<?xml version="1.0" encoding="utf-8"?>
<!-- Parent linear layout with vertical orientation -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000" >

    <LinearLayout
        style="@style/my_layout_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <!-- title Child linear layout with horizontal orientation -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtTitle"
                style="@style/my_text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_getweather" />
        </LinearLayout>

        <!-- city Child linear layout with horizontal orientation -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtCityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/prefs_label_currentcity" />

            <TextView
                android:id="@+id/txtCityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty" />
        </LinearLayout>

        <!-- date Child linear layout with horizontal orientation -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/empty" />
        </LinearLayout>

        <!-- minmax Child linear layout with horizontal orientation -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtCurrentTempLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/getweather_label_currenttemp" />

            <TextView
                android:id="@+id/txtCurrentTempValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/empty" />
            
            <TextView
                android:id="@+id/txtMeasurementType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/txtMinLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/getweather_label_mintemp" />

            <TextView
                android:id="@+id/txtMinValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/txtMaxLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/getweather_label_maxtemp" />

            <TextView
                android:id="@+id/txtMaxValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/empty" />
        </LinearLayout>

        <!-- 24 hour Child linear layout with horizontal orientation -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txt24hourLabel"
                style="@style/my_text_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/getweather_label_24hour" />
        </LinearLayout>

        <!-- weather 1 Child linear layout with horizontal orientation -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewimg1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/textViewimg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/textViewimg3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/textViewimg4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/empty" />
        </LinearLayout>

        <!-- weather 2 Child linear layout with horizontal orientation -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgweather1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/img01d" />

            <ImageView
                android:id="@+id/imgweather2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/img01d" />

            <ImageView
                android:id="@+id/imgweather3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/img01d" />

            <ImageView
                android:id="@+id/imgweather4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/img01d" />
        </LinearLayout>

        <!-- weather 3 Child linear layout with horizontal orientation -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewimg5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/textViewimg6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/textViewimg7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/empty" />

            <TextView
                android:id="@+id/textViewimg8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/empty" />
        </LinearLayout>

        <!-- weather 4 Child linear layout with horizontal orientation -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgweather5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/img01d" />

            <ImageView
                android:id="@+id/imgweather6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/img01d" />

            <ImageView
                android:id="@+id/imgweather7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/img01d" />

            <ImageView
                android:id="@+id/imgweather8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/img01d" />
        </LinearLayout>

        <!-- prefs button -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnSetPrefs"
                style="@style/my_text_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="launchPreferencesActivity"
                android:text="@string/btn_set_preferences" />
        </LinearLayout>

        <!-- progress -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ProgressBar
                android:id="@+id/prog"
                style="@android:style/Widget.ProgressBar.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>